--- a/WSClient_Assignment3/WSClient_Assignment3.csproj
+++ b/WSClient_Assignment3/WSClient_Assignment3.csproj
@@ -59,6 +59,9 @@
     <None Include="Connected Services\Assignment3ServiceReference\WSClient_Assignment3.Assignment3ServiceReference.HelloWorldResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\Assignment3ServiceReference\WSClient_Assignment3.Assignment3ServiceReference.TxtFileResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
