--- a/WSAssignment4/WSAssignment4.csproj
+++ b/WSAssignment4/WSAssignment4.csproj
@@ -71,6 +71,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
     <Compile Include="Assignment4Service.asmx.cs">
       <DependentUpon>Assignment4Service.asmx</DependentUpon>
       <SubType>Component</SubType>
