--- a/WSAssignment4/WSAssignment4.csproj
+++ b/WSAssignment4/WSAssignment4.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>WSAssignment4</RootNamespace>
     <AssemblyName>WSAssignment4</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -106,7 +106,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>49895</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:49895/</IISUrl>
+          <IISUrl>http://localhost/WSAssignment4</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
