--- a/WSAssignment3/WSAssignment3.csproj
+++ b/WSAssignment3/WSAssignment3.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>WSAssignment3</RootNamespace>
     <AssemblyName>WSAssignment3</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress>
     </Use64BitIISExpress>
     <IISExpressSSLPort />
@@ -102,7 +102,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50017</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50017/</IISUrl>
+          <IISUrl>http://localhost/WSAssignment3</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
