--- a/vt21-sysa14-pk-pa1-vt21-sysa14-it-s-not-just-for-boys/JavaClientAssignment4/.settings/org.eclipse.core.resources.prefs
+++ b/vt21-sysa14-pk-pa1-vt21-sysa14-it-s-not-just-for-boys/JavaClientAssignment4/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/org/tempuri/Account.java=UTF-8
 encoding//src/org/tempuri/Assignment4Service.java=UTF-8
 encoding//src/org/tempuri/Assignment4ServiceLocator.java=UTF-8
 encoding//src/org/tempuri/Assignment4ServiceSoap.java=UTF-8
