--- a/WSClient_Assignment3/App.config
+++ b/WSClient_Assignment3/App.config
@@ -4,16 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="Assignment3ServiceSoap" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost/WSAssignment3/Assignment3Service.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Assignment3ServiceSoap"
-                contract="Assignment3ServiceReference.Assignment3ServiceSoap"
-                name="Assignment3ServiceSoap" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
