--- a/WSClient2_Assignment4/App.config
+++ b/WSClient2_Assignment4/App.config
@@ -4,16 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="Assignment4ServiceSoap" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost/WSAssignment4/Assignment4Service.asmx"
-                binding="basicHttpBinding" bindingConfiguration="Assignment4ServiceSoap"
-                contract="Assignment4ServiceReference.Assignment4ServiceSoap"
-                name="Assignment4ServiceSoap" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
