--- a/WSAssignment5/WSAssignment5.csproj
+++ b/WSAssignment5/WSAssignment5.csproj
@@ -75,6 +75,7 @@
       <DependentUpon>Assignment5Service.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="DataAccessLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
