Saving schedule in java

--- a/vt21-sysa14-pk-pa1-vt21-sysa14-it-s-not-just-for-boys/JavaClientAssignment4/.settings/org.eclipse.core.resources.prefs
+++ b/vt21-sysa14-pk-pa1-vt21-sysa14-it-s-not-just-for-boys/JavaClientAssignment4/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//src/org/tempuri/Assignment4Service.java=UTF-8
 encoding//src/org/tempuri/Assignment4ServiceLocator.java=UTF-8
 encoding//src/org/tempuri/Assignment4ServiceSoap.java=UTF-8
 encoding//src/org/tempuri/Assignment4ServiceSoapStub.java=UTF-8
+encoding//src/org/tempuri/SavingSchedule.java=UTF-8
