--- a/WSAssignment5/WSAssignment5.csproj
+++ b/WSAssignment5/WSAssignment5.csproj
@@ -77,6 +77,7 @@
     </Compile>
     <Compile Include="DataAccessLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlQueries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
