--- a/WSAssignment6/WSAssignment6.csproj
+++ b/WSAssignment6/WSAssignment6.csproj
@@ -67,10 +67,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assignment6Service.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assignment6Service.asmx.cs">
+      <DependentUpon>Assignment6Service.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="DataAccessLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlQueries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
