--- a/WSAssignment5/WSAssignment5.csproj
+++ b/WSAssignment5/WSAssignment5.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>WSAssignment5</RootNamespace>
     <AssemblyName>WSAssignment5</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -77,7 +77,6 @@
     </Compile>
     <Compile Include="DataAccessLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlQueries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
