--- a/WSAssignment6/WSAssignment6.csproj
+++ b/WSAssignment6/WSAssignment6.csproj
@@ -76,6 +76,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DataAccessLayer.cs" />
+    <Compile Include="Errorhandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlQueries.cs" />
   </ItemGroup>
