--- a/WSAssignment_6/WSAssignment_6.csproj
+++ b/WSAssignment_6/WSAssignment_6.csproj
@@ -7,12 +7,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9606CDE9-A171-48A5-8262-20FFF4AD6BBA}</ProjectGuid>
+    <ProjectGuid>{F3CCEE2C-7228-4902-8531-A51ABCF4E0D7}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WSAssignment6</RootNamespace>
-    <AssemblyName>WSAssignment6</AssemblyName>
+    <RootNamespace>WSAssignment_6</RootNamespace>
+    <AssemblyName>WSAssignment_6</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
@@ -67,16 +67,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assignment6Service.asmx" />
+    <Content Include="Assignment6Service1.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assignment6Service.asmx.cs">
-      <DependentUpon>Assignment6Service.asmx</DependentUpon>
+    <Compile Include="Assignment6Service1.asmx.cs">
+      <DependentUpon>Assignment6Service1.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DataAccessLayer.cs" />
-    <Compile Include="Errorhandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlQueries.cs" />
   </ItemGroup>
@@ -102,9 +101,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>49741</DevelopmentServerPort>
+          <DevelopmentServerPort>50039</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/WSAssignment6</IISUrl>
+          <IISUrl>http://localhost/WSAssignment_6</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
