--- a/WSAssignment6/WSAssignment6.csproj
+++ b/WSAssignment6/WSAssignment6.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>WSAssignment6</RootNamespace>
     <AssemblyName>WSAssignment6</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -103,7 +103,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50843</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:49705/</IISUrl>
+          <IISUrl>http://localhost/WSAssignment6</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
