Skicka List<string[]>

--- a/ERPClient1_Assignment6/App.config
+++ b/ERPClient1_Assignment6/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="Assignment6ServiceSoap" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost/WSAssignment6/Assignment6Service.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Assignment6ServiceSoap"
+                contract="Assignment6Reference.Assignment6ServiceSoap" name="Assignment6ServiceSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
