--- a/WSClient2_Assignment3/WSClient2_Assignment3.csproj
+++ b/WSClient2_Assignment3/WSClient2_Assignment3.csproj
@@ -54,6 +54,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Errorhandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
