--- a/ERPClient1_Assignment6/App.config
+++ b/ERPClient1_Assignment6/App.config
@@ -4,9 +4,17 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <system.serviceModel>
-        <bindings>
+
+      <bindings>
             <basicHttpBinding>
-                <binding name="Assignment6ServiceSoap" />
+      <binding name="Assignment6ServiceSoap" allowCookies="true"
+        maxReceivedMessageSize="20000000"
+        maxBufferSize="20000000"
+        maxBufferPoolSize="20000000">
+        <readerQuotas maxDepth="32"
+        maxArrayLength="200000000"
+        maxStringContentLength="200000000"/>
+      	</binding>    
             </basicHttpBinding>
         </bindings>
         <client>
@@ -16,3 +24,9 @@
         </client>
     </system.serviceModel>
 </configuration>
+
+
+
+
+      
+
