--- a/WSClient1_Assignment4/WSClient1_Assignment4.csproj
+++ b/WSClient1_Assignment4/WSClient1_Assignment4.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Errorhandler.cs" />
     <Compile Include="MyProxy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
