--- a/ERPClient1_Assignment5/App.config
+++ b/ERPClient1_Assignment5/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="Assignment5ServiceSoap" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost/WSAssignment5/Assignment5Service.asmx"
+                binding="basicHttpBinding" bindingConfiguration="Assignment5ServiceSoap"
+                contract="Assignment5Reference.Assignment5ServiceSoap" name="Assignment5ServiceSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
