--- a/ERPClient1_Assignment5/ERPClient1_Assignment5.csproj
+++ b/ERPClient1_Assignment5/ERPClient1_Assignment5.csproj
@@ -54,6 +54,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Errorhandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
