--- a/WSAssignment5/WSAssignment5.csproj
+++ b/WSAssignment5/WSAssignment5.csproj
@@ -102,7 +102,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>56485</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/WSAssignment5</IISUrl>
+          <IISUrl>http://localhost:56485/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
